# westgate-bcoem-testdata

./: .envrc.example  .gitignore  Makefile  README.MD  mypy.ini  pyproject.toml
data/: brew_styles.csv  postcodes.csv  street_names.csv
data_sources/: Street_Name_Labels.csv  victorian_postcodes.csv
mypy_stubs/names/: __init__.pyi
mypy_stubs/unique_names_generator/: __init__.pyi
src/: config.py  data.py  datadefs.py  db.py  gen-entries.py  gen-points.py  gen_entries.py  gen_points.py  main.py  process-post-codes.py  process-street-names.py  utils.py
