[tool.poetry]
name = "westgate-bcoem-testdata"
version = "0.1.0"
description = ""
authors = ["Chris Speck <cgspeck@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
names = "^0.3.0"
unique-names-generator = "^1.0.2"
mysqlclient = "^2.2.0"

[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.9"
mypy = "^0.950"
types-mysqlclient = "^2.2.0.20250326"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
